# hs-connection

./: .appveyor.yml  .gitignore  .haskell-ci  .travis.yml  CHANGELOG.md  README.md  connection.cabal  stack.yaml
.github/workflows/: test.yaml
Network/: Connection.hs
Network/Connection/: ChachaRNG.hs  Types.hs
cbits/: random_chacha.c  random_chacha.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: connection-0.4.1-inplace.conf  package.cache
examples/: SMTPConnection.hs  SimpleConnection.hs  SocksConnection.hs  StartTLSConnection.hs  TLSConnection.hs  TLSCustom.hs
timeout-test/: Main.hs
