Name:                connection
Version:             0.1.0
Description:         Simple connection API with raw or secure sockets.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Simple connection API with raw or secure sockets.
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-connection
data-files:          README.md

Flag test
  Description:       Build unit test
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , containers
                   , network >= 2.3
                   , tls >= 1.0
                   , tls-extra >= 0.5
                   , cprng-aes
                   , socks >= 0.4
                   , certificate >= 1.2.0 && < 1.3.0
  Exposed-modules:   Network.Connection
  ghc-options:       -Wall

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-connection
